	* Added a test in 'rivendell/rd_common.h' to avoid breaking the
	build under MingW32.
2017-01-18 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'logname' call parameter to rd_listlogs().
	* Added a 'log_purge_date' field to the 'rd_log' struct in
	'rivendell\rd_listlogs.h'.
	* Fixed bugs in 'rivendell/rd_listlogs.c' where uninitialized variables
	could introduce garbage into the Web API call.
	* Applied URL encoding to the string parameters for the ListLogs
	Web API call.
2017-01-19 Todd Baker <bakert@rfa.org>
	* Added URL String Encoding to all Rivendell function calls
	* Renamed all docbook files to the correct name in Make files. Also
	made changes to the xml to reflect correct names and fix typos.
2017-01-27 Todd Baker <bakert@rfa.org>
	* Created common functions strlcpy and RD_DateTimeConvert. strlcpy
	copies strings and null terminates automatically. RD_DateTimeConvert
	takes a DateTimeString and Converts to local time or GMT based on input.
	* Modified rivendell programs and test programs to use the above functions.
2017-01-30 Todd Baker <bakert@rfa.org>
	* Fixed bug in rivendell/rd_common.c to Convert DateTimes
	to localtime.  
	* Fixed tests/listlog_test.c and tests/listlogs.c to use tm_struct for
	DateTimes.
2017-01-30 Todd Baker <bakert@rfa.org>
	* Modified docbook/rd_addcart.xml, docbook/rd_addcut.xml,docbook/rd_addcut.xml
	docbook/rd_editcart.xml, docbook/rd_editcut.xml, docbook/rd_listcart.xml,
	docbook/rd_listcarts.xml, docbook/rd_listcut.xml, docbook/rd_listcuts.xml, 
	docbook/rd_listlog.xml, docbook/rd_listlogs.xml 
	to show datetime values as tm structs.
	* Fixed rivendell/rd_editcart.c, and rivendell/rd_editcart.h to NOT include
2017-01-30 Fred Gleason <fredg@paravelsystems.com>
	* Added 'RD_AddLog()' call.
	* Added 'RD_DeleteLog()' call.
	* Added common i/o functions for tests in 'tests/common.c' and
	'tests/common.h'.
2017-02-01 Todd Baker <bakert@rfa.org>
	* Modified rivendell/rd_common.c to fix Daylight Saving Time adjustment.