@@ -81,35 +81,35 @@ dist_exportpeaks_test_SOURCES = exportpeaks_test.c
 dist_deleteaudio_test_SOURCES = deleteaudio_test.c 
 dist_copyaudio_test_SOURCES = copyaudio_test.c 
 
-listgroups_test_LDADD = -lrivwebcapi -lexpat -lcurl
-listgroup_test_LDADD = -lrivwebcapi -lexpat -lcurl
-listcarts_test_LDADD =  -lrivwebcapi -lexpat -lcurl
-listcart_test_LDADD =  -lrivwebcapi -lexpat -lcurl
-listcuts_test_LDADD =  -lrivwebcapi -lexpat -lcurl
-listcut_test_LDADD =  -lrivwebcapi -lexpat -lcurl
-listschedcodes_test_LDADD =  -lrivwebcapi -lexpat -lcurl
-assignschedcode_test_LDADD =  -lrivwebcapi -lexpat -lcurl
-listcartschedcodes_test_LDADD =  -lrivwebcapi -lexpat -lcurl
-unassignschedcode_test_LDADD =  -lrivwebcapi -lexpat -lcurl
-addcart_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-addcut_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-addlog_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-deletelog_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-removecart_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-removecut_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-audioinfo_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-audiostore_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-trimaudio_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-listlog_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-listlogs_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-listservices_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-editcart_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-editcut_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-importcart_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-exportcart_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-exportpeaks_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-deleteaudio_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
-copyaudio_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+listgroups_test_LDADD = -lrivwebcapi -lexpat -lcurl -lm
+listgroup_test_LDADD = -lrivwebcapi -lexpat -lcurl -lm
+listcarts_test_LDADD =  -lrivwebcapi -lexpat -lcurl -lm
+listcart_test_LDADD =  -lrivwebcapi -lexpat -lcurl -lm
+listcuts_test_LDADD =  -lrivwebcapi -lexpat -lcurl -lm
+listcut_test_LDADD =  -lrivwebcapi -lexpat -lcurl -lm
+listschedcodes_test_LDADD =  -lrivwebcapi -lexpat -lcurl -lm
+assignschedcode_test_LDADD =  -lrivwebcapi -lexpat -lcurl -lm
+listcartschedcodes_test_LDADD =  -lrivwebcapi -lexpat -lcurl -lm
+unassignschedcode_test_LDADD =  -lrivwebcapi -lexpat -lcurl -lm
+addcart_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+addcut_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+addlog_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+deletelog_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+removecart_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+removecut_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+audioinfo_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+audiostore_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+trimaudio_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+listlog_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+listlogs_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+listservices_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+editcart_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+editcut_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+importcart_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+exportcart_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+exportpeaks_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+deleteaudio_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
+copyaudio_test_LDADD  =  -lrivwebcapi -lexpat -lcurl -lm
 
 CLEANFILES = *~\
              moc_*
